// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#cogs/cogs/textarea/field <Field /> With additional props Default value is a string matches the snapshot 1`] = `
<textarea
  className="MOCK CLASSNAME"
  defaultValue="MOCK DEFAULT VALUE"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  onChange={[Function]}
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
/>
`;

exports[`#cogs/cogs/textarea/field <Field /> With additional props Value is a string matches the snapshot 1`] = `
<textarea
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  onChange={[Function]}
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
  value="MOCK VALUE"
/>
`;

exports[`#cogs/cogs/textarea/field <Field /> With required props matches the snapshot 1`] = `
<textarea
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  onChange={[Function]}
  readOnly={false}
  required={false}
  value=""
/>
`;
